--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 bcrypt==4.0.1
 certifi==2025.1.31
 cfgv==3.4.0
@@ -26,6 +27,7 @@ pydantic_core==2.33.0
 PyJWT==1.7.1
 python-dotenv==1.1.0
 PyYAML==6.0.2
+redis==5.2.1
 requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.40
